plugins {
    id("maven-publish")
    id("java")
    id("java-library")
}

group 'co.aikar'
version '0.5.2-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url 'https://repo.spongepowered.org/maven' }
    maven { url 'https://repo.aikar.co/content/groups/aikar/' }
}

dependencies {
    compileOnly('net.minestom:minestom-snapshots:f8b6eb0d0b') {
        exclude group: "net.minestom", module: "minestom-data-full"
    }

    implementation('com.google.guava:guava:33.3.0-jre')
    api 'co.aikar:acf-core:0.5.1-SNAPSHOT'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}